--- a/index.html
+++ b/index.html
@@ -159,6 +159,21 @@
                 </a>
             </div>
         </div>
+
+        <div class="project">
+            <h3>Data Analysis on Titanic Dataset</h3>
+            <img src="Image/Survivor_count.png" alt="Project 2">
+            <img src="Image/Age_Distribution.png" alt="Project 2">
+            <p>This project aims to provide a comprehensive analysis of the Titanic dataset using popular Python libraries such as NumPy, Pandas, Matplotlib, and Seaborn. By exploring this repository, you'll gain insights into the Titanic dataset and see how these libraries can be utilized for data analysis and visualization.</p>
+            <div class="technologies-used">
+                <strong>Technologies Used:</strong> Python, NumPy, Pandas, Matplotlib, and Seaborn
+            </div>
+            <div class="links">
+                <a href="https://github.com/MrAkash920/Data_Analysis_on_Titanic_dataset/">
+                    <img src="Image/github.png" alt="GitHub Logo">
+                </a>
+            </div>
+        </div>
         <!-- Add more projects as needed -->
     </section>
 
