--- a/index.html
+++ b/index.html
@@ -199,13 +199,12 @@
             </div>
         </div>
     </section>
-    
-    
+
     <section id="resume">
         <h2>Resume</h2>
-        <!-- You can add a link to your resume file here -->
-        <a href="Source\Akash(2003)-DA.pdf" target="_blank">Download Resume (PDF)</a>
+        <a href="Source\Akash(2003)-DA.pdf" target="_blank" class="download-button">Download Resume</a>
     </section>
+
 
     <footer>
         <p>&copy; 2023 Akash Singh</p>
