--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         </div>
 
         <div class="project">
-            <h3>Employe Management System</h3>
+            <h3>Car accident realtime dashboard on Exceel</h3>
             <img src="Image/p4.png" alt="Project 2">
             <img src="Image/p4.2.png" alt="Project 2">
             <p>The Excel dashboard project on road accidents is a visual reporting tool that compiles and analyzes data related to road accidents. It provides a concise and
