--- a/index.html
+++ b/index.html
@@ -174,6 +174,23 @@
                 </a>
             </div>
         </div>
+
+        <div class="project">
+            <h3>Superstore Data Exploration</h3>
+            <img src="Image/p5.png" alt="Project 5">
+            <img src="Image/5.2.png" alt="Project 5">
+            <p>The Excel dashboard project on a superstore sales data is a visual reporting tool that compiles and analyzes data related to sales ravenue. It provides a concise and
+            comprehensive overview of ravenue statistics, such as sales month, types, buyers age, and time trends.</p>
+            <div class="technologies-used">
+                <strong>Technologies Used:</strong> Excel, Data Visualization, Data Cleansing, KPI
+            </div>
+            <div class="links">
+                
+                <a href="https://docs.google.com/spreadsheets/d/1RajpljD7tJNRRE48h_n6HR15cA_UiZIN/edit?usp=sharing&ouid=105311442314051299040&rtpof=true&sd=true">
+                    <img src="Image/excel.png" alt="Demo Logo">
+                </a>
+            </div>
+        </div>
         <!-- Add more projects as needed -->
     </section>
 
