--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             </div>
             <div class="links">
                 
-                <a href="https://docs.google.com/spreadsheets/d/1RajpljD7tJNRRE48h_n6HR15cA_UiZIN/edit?usp=sharing&ouid=105311442314051299040&rtpof=true&sd=true">
+                <a href="https://github.com/MrAkash920/The-Spark-Foundation-Internship-Tasks/blob/main/Task%20-%203.xlsx">
                     <img src="Image/excel.png" alt="Demo Logo">
                 </a>
             </div>
